Fixed bug that caused header to shift a few pixels to the left/right when toggling between nav items

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -22,7 +22,7 @@
     font-size: min(2.31vw, .7em);
     /* using ems so we can use font size to scale the whole section */
     width: 32.4375em;
-    height: 25em;
+    height: 32.4375em;
     position: relative;
   }
   #sbs .cs-centre {
